--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -774,11 +774,35 @@ li.CodeMirror-hint {
 
 #quickselect .select2-results__option {
     padding: 5px 10px;
-    max-height: 50px;
+    height: 40px;
     /* line-height: 50px; */
     white-space: pre;
     text-overflow: ellipsis;
     overflow: hidden;
+}
+
+#quickselect .select2-results__option .title {
+    font-size: 14px;
+    line-height: 20px;
+}
+
+#quickselect .select2-results__option .description {
+    color: rgba(0, 0, 0, 0.5);
+    line-height: 20px;
+    font-size: 12px;
+}
+
+#quickselect .select2-results__option .icon {
+    width: 40px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    float: left;
+    margin-right: 10px;
+}
+
+#quickselect .select2-results__option .icon>img {
+    max-width: 40px;
 }
 
 #quickselect .select2-results__option--highlighted {
