--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -260,20 +260,24 @@ body {
     background: #ff3b4e;
 }
 
-#options #customize .bottom {
+#options #customize .bottom,
+#out .bottom {
     position: absolute;
     bottom: 0;
     left: 30px;
     right: 30px;
 }
 
+#out .bottom {
+    white-space: normal;
+}
 
 #options .footBtn {
     float: right;
     background: #00af2c;
     border-radius: 4px;
     color: white;
-    padding: 2px 10px;
+    padding: 2px 5px;
     margin: 0px 5px;
     cursor: pointer;
 }
@@ -798,7 +802,7 @@ li.CodeMirror-hint {
 }
 
 #quickselect .select2-results__option .icon>img {
-    max-width: 40px;
+    max-width: 35px;
 }
 
 #quickselect .select2-results__option--highlighted {
