--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -845,7 +845,7 @@ li.CodeMirror-hint {
     line-height: 3rem;
 }
 
-.swal2-content img.icon8s {
+.swal2-shown img.networkImg {
     vertical-align: middle;
     max-width: 35px;
 }
