fix: 修复一个样式bug

--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -960,5 +960,7 @@ li.CodeMirror-hint {
     padding: 1px;
     top: -8px;
     right: 160px;
+    width: 20px;
+    text-align: center;
     display: none;
 }
