--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -249,6 +249,7 @@ body {
     width: auto;
     border-radius: 4px;
     margin: 0px 5px;
+    cursor: pointer;
 }
 
 #options #customize #charset.robot {
