--- a/src/assets/style/options.css
+++ b/src/assets/style/options.css
@@ -182,6 +182,7 @@ body {
     white-space: nowrap;
     text-overflow: ellipsis;
     width: 95%;
+    font-weight: bold;
 }
 
 #options table tr {
